sqlite database added

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -9,10 +9,10 @@
             android:singleLine="true" />
 
     <ListPreference
-        android:title="@string/temperatureUnits"
-        android:key="@string/temperatureUnits_key"
-        android:defaultValue="@string/temperateUnit_default"
-        android:entryValues="@array/units_list"
-        android:entries="@array/units_list" />
+        android:title="@string/pref_units_label"
+        android:key="@string/pref_units_key"
+        android:defaultValue="@string/pref_units_metric"
+        android:entryValues="@array/pref_units_values"
+        android:entries="@array/pref_units_options" />
 
 </PreferenceScreen>
