--- a/app/src/main/res/layout/fragment_detail.xml
+++ b/app/src/main/res/layout/fragment_detail.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/detail_view"
         android:layout_width="match_parent"
-        android:layout_height="24dp"
+        android:layout_height="wrap_content"
         android:gravity="center_vertical"
         android:text="Today-Sunny-88/63"/>
 
