--- a/app/src/main/res/layout/list_item_forecast.xml
+++ b/app/src/main/res/layout/list_item_forecast.xml
@@ -1,14 +1,55 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:orientation="horizontal" android:layout_width="match_parent"
+    android:layout_height="80dp"
     android:layout_margin="4dp">
 
-    <TextView
-        android:id="@+id/list_item_forecast_textview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <ImageView
+        android:layout_weight="0.2"
+        android:id="@+id/list_item_icon"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
         android:gravity="center_vertical"
-        android:text="Today-Sunny-88/63"/>
+        android:src="@drawable/ic_launcher"/>
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_marginLeft="16dp"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        android:layout_weight="0.5">
+        <TextView
+            android:layout_weight="0.5"
+            android:id="@+id/list_item_date_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:gravity="center_vertical"
+            android:textSize="24sp"
+            android:text="Today"/>
+        <TextView
+            android:layout_weight="0.5"
+            android:id="@+id/list_item_forecast_textview"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:textSize="24sp"
+            android:gravity="center_vertical"
+            android:text="Sunny"/>
+    </LinearLayout>
+    <TextView
+        android:layout_weight="0.15"
+        android:id="@+id/list_item_high_textview"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:textSize="24sp"
+        android:gravity="right|center_vertical"
+        android:text="88/"/>
+    <TextView
+        android:layout_weight="0.15"
+        android:id="@+id/list_item_low_textview"
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:textSize="24sp"
+        android:text="63"/>
 
 </LinearLayout>
