--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -1,66 +1,66 @@
-<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal" android:layout_width="match_parent"
-    android:layout_height="200dp"
-    android:background="@color/sunshine_light_blue">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
+    android:minHeight="?android:attr/listPreferredItemHeight"
+    android:orientation="horizontal"
+    android:background="@drawable/today_touch_selector">
 
     <LinearLayout
-        android:layout_weight="0.5"
+        android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
+        android:layout_weight="7"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="60dp"
         android:orientation="vertical">
+
         <TextView
-            android:layout_weight="0.2"
             android:id="@+id/list_item_date_textview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textSize="24sp"
-            android:textColor="#FFFFFF"
-            android:text="Today"/>
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:fontFamily="sans-serif-condensed"
+            android:textColor="@color/white" />
+
         <TextView
-            android:layout_weight="0.4"
             android:id="@+id/list_item_high_textview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             android:textSize="72sp"
-            android:gravity="center"
-            android:textColor="#FFFFFF"
-            android:text="88"/>
+            android:fontFamily="sans-serif-light"
+            android:textColor="@color/white" />
+
         <TextView
-            android:layout_weight="0.3"
             android:id="@+id/list_item_low_textview"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:gravity="center"
-            android:textSize="48sp"
-            android:textColor="#FFFFFF"
-            android:text="63"
-            android:layout_marginBottom="8dp"/>
+            android:layout_height="wrap_content"
+            android:textColor="@color/white"
+            android:textSize="36sp"
+            android:layout_marginLeft="8dp"/>
     </LinearLayout>
 
     <LinearLayout
-        android:layout_weight="0.5"
+        android:layout_height="wrap_content"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_weight="5"
+        android:layout_marginRight="16dp"
+        android:orientation="vertical"
+        android:gravity="center_horizontal|bottom">
+
         <ImageView
-        android:layout_weight="0.8"
-        android:id="@+id/list_item_icon"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:gravity="center_vertical"/>
+            android:id="@+id/list_item_icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"/>
 
         <TextView
-            android:layout_weight="0.2"
             android:id="@+id/list_item_forecast_textview"
-            android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:textSize="24sp"
-            android:textColor="#FFFFFF"
-            android:gravity="center"
-            android:text="Sunny"
-            android:textStyle="bold"/>
-
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-condensed"
+            android:layout_gravity="center_horizontal"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textColor="@color/white"/>
     </LinearLayout>
 </LinearLayout>
