--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -9,4 +9,14 @@
         <item>@string/pref_units_metric</item>
         <item>@string/pref_units_imperial</item>
     </string-array>
+
+    <string-array name="pref_icon_options">
+        <item>@string/pref_icon_label_mono</item>
+        <item>@string/pref_icon_label_colored</item>
+    </string-array>
+
+    <string-array name="pref_icon_values">
+        <item>@string/pref_icon_label_mono</item>
+        <item>@string/pref_icon_label_colored</item>
+    </string-array>
 </resources>
